fix: code wrap

--- a/packages/vuepress-theme-reco/src/client/styles/theme.css
+++ b/packages/vuepress-theme-reco/src/client/styles/theme.css
@@ -10,7 +10,7 @@
     @apply md:px-10;
     border-top: 1px solid transparent;
     &.theme-reco-default-content code {
-      @apply mx-1 px-2 py-0.5 rounded bg-reco-primary/10 text-sm;
+      @apply inline-block mx-1 px-2 py-0.5 rounded bg-reco-primary/10 text-sm;
       @apply dark:bg-reco-primary/20;
     }
   }
